misc/baikal/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: baikal
spec:
  selector:
    app: baikal
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
