misc/baikal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baikal
  namespace: baikal
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "calendar.hk.home"
    cert-manager.io/private-key-algorithm: "Ed25519"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - calendar.hk.home
      secretName: baikal-cert
  rules:
    - host: calendar.hk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: baikal
                port:
                  number: 80
